# d_ocr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/api/: routes.py
standards/: 00-project-context.md  01-requirements.md  02-coding-standards.md  03-testing-standards.md  04-git-workflow.md  05-cicd-standards.md  06-ai-collab-protocol.md  PROGRESS.md  README.md
tests/: test_health.py
